kubernetes/apps/webtrees/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webtrees
  namespace: apps
spec:
  selector:
    app: webtrees
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
